--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="username">Nutzername</string>
     <string name="settings">Einstellungen</string>
     <string name="user">Nutzer</string>
+    <string name="product_name">Name_Produkt</string>
 </resources>
