--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="logout">Logout</string>
     <string name="help">Hilfe</string>
     <string name="rate_us">Bewerte uns</string>
-    <string name="imprint">Impressum</string>
+    <string name="contact">Kontakt</string>
     <string name="quantity">Menge</string>
     <string name="choose_takeout_time">Wählen Sie eine Abholzeit</string>
     <string name="price">Preis</string>
@@ -36,4 +36,5 @@
     <string name="settings">Einstellungen</string>
     <string name="user">Nutzer</string>
     <string name="product_name">Name_Produkt</string>
+    <string name="order">Bestellung aufgeben</string>
 </resources>
