--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="user">Nutzer</string>
     <string name="product_name">Name_Produkt</string>
     <string name="order">Bestellung aufgeben</string>
+    <string name="back">Zurück</string>
 </resources>
