--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,6 @@
     <string name="back">Zurück</string>
     <string name="add_to_cart">Zum Warenkorb hinzufügen</string>
     <string name="quantity_number">Mengenanzahl</string>
-    <string name="map_id">87916eb08fcb319d</string>
+    <string name="map_id">AIzaSyCxm3y9G6YAgyTSz4g7pjMKFpyyLboxkyE</string>
+    <string name="show">Anzeigen</string>
 </resources>
